--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -4,7 +4,7 @@ Explain : permission
 File : common.scss 
 Date : 2024.08.29
 Version : 1.1.12
-text : 1.16
+text : 1.17
 */
 /*
 z-index 순서
@@ -161,14 +161,11 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font-size: 16px;
-  font-size: clamp(100%, 16px, 120%);
+  text-size-adjust: none;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
   -o-text-size-adjust: none;
-  text-size-adjust: none;
   vertical-align: baseline;
 }
 
@@ -290,18 +287,13 @@ html {
   font-family: "Pretendard_Light";
   font-weight: normal;
   font-size: 16px;
-  font-size: clamp(100%, 16px, 120%);
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-  -o-text-size-adjust: none;
-  vertical-align: baseline;
 }
 
 .wrap {
   position: relative;
   width: 100%;
   margin: 0 auto;
+  font-size: 1rem;
   color: #333333;
   background-color: #f1f4f6;
 }
@@ -2403,7 +2395,7 @@ Date   : 2024.08.29
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .tit p, .wrap.pm_guideRewardCE .content section.sec_guide .tit p {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .tit p:nth-child(1), .wrap.pm_guideRewardCE .content section.sec_guide .tit p:nth-child(1) {
@@ -2443,26 +2435,10 @@ Date   : 2024.08.29
 .wrap.pm_guideRewardBM .content section.sec_guide .tit p:nth-child(n+2), .wrap.pm_guideRewardCE .content section.sec_guide .tit p:nth-child(n+2) {
   font-family: "Pretendard_Bold";
   margin-top: 8px;
-  font-size: 16px;
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .tit p:nth-child(2), .wrap.pm_guideRewardCE .content section.sec_guide .tit p:nth-child(2) {
   color: #7d838d;
-  font-size: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: initial;
-  -webkit-box-direction: initial;
-      -ms-flex-direction: initial;
-          flex-direction: initial;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 0;
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .cont, .wrap.pm_guideRewardCE .content section.sec_guide .cont {
@@ -2549,35 +2525,8 @@ Date   : 2024.08.29
   background-size: contain;
 }
 
-.wrap.pm_guideRewardBM .content section.sec_guide .cont .alarm, .wrap.pm_guideRewardCE .content section.sec_guide .cont .alarm {
-  font-size: 16px;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-  -o-text-size-adjust: none;
-}
-
 .wrap.pm_guideRewardBM .content section.sec_guide .cont .alarm > p, .wrap.pm_guideRewardCE .content section.sec_guide .cont .alarm > p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: initial;
-  -webkit-box-direction: initial;
-      -ms-flex-direction: initial;
-          flex-direction: initial;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 0;
-  font-size: 16px;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-  -o-text-size-adjust: none;
-  color: red;
+  color: pink;
   position: relative;
   margin: 30px 0 0 0;
   padding: 0 0 0 20px;
