--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -162,7 +162,6 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  vertical-align: baseline;
 }
 
 body {
@@ -281,6 +280,15 @@ html {
   min-height: -webkit-fill-available;
   color: #333333;
   font-size: 10px;
+}
+
+html body {
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -o-text-size-adjust: none;
+  vertical-align: baseline;
 }
 
 .wrap {
