--- a/work/permission_guide/css/common.css
+++ b/work/permission_guide/css/common.css
@@ -4552,7 +4552,7 @@ Date   : 2024.11.12
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
-  aspect-ratio: 1/1;
+  aspect-ratio: 8/9;
 }
 .wrap.pm_blogURL .content section.sec_example .cont ul li:nth-child(2) {
   margin: 30px 0 0 0;
@@ -4570,6 +4570,7 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
+  width: calc(100% - 40px);
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
@@ -4588,7 +4589,8 @@ Date   : 2024.11.12
   height: 252px;
   background-size: contain;
   display: block;
-  max-width: 262px;
+  width: calc(100% - 40px);
+  max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
   aspect-ratio: 1/1;
@@ -4606,6 +4608,7 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
+  width: calc(100% - 40px);
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
@@ -4635,6 +4638,7 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
+  width: calc(100% - 40px);
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
@@ -5259,6 +5263,7 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
+  width: calc(100% - 40px);
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
@@ -5288,6 +5293,7 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
+  width: calc(100% - 40px);
   max-width: 240px;
   height: auto;
   margin: 20px 0px 0 0;
@@ -5309,13 +5315,11 @@ Date   : 2024.11.12
   height: 240px;
   background-size: contain;
   display: block;
-  width: 100%;
+  width: calc(100% - 40px);
   max-width: 240px;
-  background-position: 0 0;
-  width: 100%;
+  height: auto;
   margin: 20px 0px 0 0;
   aspect-ratio: 1/1;
-  height: auto;
 }
 .wrap.pm_placeURL footer {
   position: sticky;
