--- a/work/list/css/common.css
+++ b/work/list/css/common.css
@@ -424,7 +424,7 @@ Date   : 2025.02.14
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 6px;
+  gap: 0px;
   font-family: "SpoqaHanSansNeoM";
   font-weight: normal;
   position: relative;
@@ -463,6 +463,6 @@ Date   : 2025.02.14
             justify-content: center;
   }
   .wrap.pm_list .contents .tab_contents .pointBox span[class^=t] {
-    width: calc(25% - 6px);
+    width: 25%;
   }
 }/*# sourceMappingURL=common.css.map */
