--- a/work/mobonAI/source/scss/work.scss
+++ b/work/mobonAI/source/scss/work.scss
@@ -84,9 +84,6 @@ Date   : 2025.02.11
             // 시작하기
             &.sec_talk {
               position: relative;
-              // @include flex_column;
-              // height: calc(100% - 80px);
-              // @include flex();
               text-align: center;
 
               &.t2 {
@@ -95,16 +92,8 @@ Date   : 2025.02.11
                 }
               }
 
-              // >div {
-              //   border: 1px solid #f00;
-              // }
-
               .box_guide {
-                // height: calc(100vh - 250px);
                 margin: 200px 0 80px 0;
-
-
-                // @include flex_column();
 
                 .guideBox {
 
@@ -136,21 +125,15 @@ Date   : 2025.02.11
               .box_talk {
                 position: relative;
                 height: calc(100vh - 240px);
-                // overflow: hidden;
 
                 .talkBox {
                   overflow-y: auto;
-                  // width: 60%;
                   width: 100%;
                   height: 100%;
                   overflow-x: hidden;
                   min-width: 1000px;
                   margin: 0 auto;
                   padding: 0 calc(15% - 0px) 80px calc(15% + 10px);
-
-                  .tit {}
-
-                  .cont {}
 
                   .Qbox,
                   .Abox {
@@ -162,8 +145,8 @@ Date   : 2025.02.11
                     text-align: right;
 
                     .box {
-
-
+                      min-width: 360px;
+                      width: 50%;
                       display: inline-block;
                       padding: 20px;
                       border-radius: 20px;
@@ -172,27 +155,52 @@ Date   : 2025.02.11
                       background-color: $color1;
 
                       p {
-                        min-width: 360px;
-                        width: 50%;
                         font-size: 16px;
                         line-height: 1.5;
                       }
                     }
                   }
 
+                  .Qbox {
+                    p {
+                      @include effect;
+                    }
+
+                    @include for;
+                  }
+
+                  @include keyframes(fadeUp) {
+                    to {
+                      opacity: 1;
+                      transform: translateY(0);
+                    }
+                  }
+
                   .Abox {
-                    // margin: 40px 0 0 0;
                     text-align: left;
 
-
-
                     .tit {
+                      @include effect;
+                      @include for;
+
+                      @include keyframes(fadeUp) {
+                        from {
+                          opacity: 0;
+                          transform: translateY(10px);
+                        }
+
+                        to {
+                          opacity: 1;
+                          transform: translateY(0);
+                        }
+                      }
+
                       p {
                         @include ftb;
                         font-size: 18px;
                         color: $pointColor;
-
                       }
+
                     }
 
                     .cont {
@@ -203,13 +211,29 @@ Date   : 2025.02.11
                         font-size: 16px;
                         line-height: 1.5;
                         // min-width: 490px;
-                        // width: 60%;
+                        // width: 60%;  
+
+
 
                       }
 
                       [class^='answer'] {
                         &:nth-child(n+2) {
                           margin: 50px 0 0 0;
+                        }
+
+                        b,
+                        p,
+                        .tableArea {
+                          @include effect;
+                          @include for;
+
+                          @include keyframes(fadeUp) {
+                            to {
+                              opacity: 1;
+                              transform: translateY(0);
+                            }
+                          }
                         }
                       }
 
@@ -289,7 +313,7 @@ Date   : 2025.02.11
                             }
                           }
 
-                        
+
                         }
 
                       }
@@ -312,7 +336,7 @@ Date   : 2025.02.11
                     }
 
                     .tableArea {
-                   
+
 
                       .tableBox {
 
